Added EF Core, DbContext class, and change the model to consist of models to fit the default multiple language structure

--- a/SolarSystem/appsettings.json
+++ b/SolarSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.,1433; Database=SolarSystemData; User Id=sa; Password=Kode1234!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
