--- a/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem.csproj
@@ -6,7 +6,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
   </ItemGroup>
 
 </Project>
