--- a/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem.csproj
@@ -5,6 +5,38 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\css\index.css" />
+    <Content Remove="wwwroot\lib\Images\cursor.png" />
+    <Content Remove="wwwroot\Planets\earth.png" />
+    <Content Remove="wwwroot\Planets\jupiter.png" />
+    <Content Remove="wwwroot\Planets\mars.png" />
+    <Content Remove="wwwroot\Planets\mercury.png" />
+    <Content Remove="wwwroot\Planets\moon.png" />
+    <Content Remove="wwwroot\Planets\neptune.png" />
+    <Content Remove="wwwroot\Planets\pluto.png" />
+    <Content Remove="wwwroot\Planets\saturn.png" />
+    <Content Remove="wwwroot\Planets\sun.png" />
+    <Content Remove="wwwroot\Planets\uranus.png" />
+    <Content Remove="wwwroot\Planets\venus.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\index.css" />
+    <None Include="wwwroot\lib\Images\cursor.png" />
+    <None Include="wwwroot\Planets\earth.png" />
+    <None Include="wwwroot\Planets\jupiter.png" />
+    <None Include="wwwroot\Planets\mars.png" />
+    <None Include="wwwroot\Planets\mercury.png" />
+    <None Include="wwwroot\Planets\moon.png" />
+    <None Include="wwwroot\Planets\neptune.png" />
+    <None Include="wwwroot\Planets\pluto.png" />
+    <None Include="wwwroot\Planets\saturn.png" />
+    <None Include="wwwroot\Planets\sun.png" />
+    <None Include="wwwroot\Planets\uranus.png" />
+    <None Include="wwwroot\Planets\venus.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
   </ItemGroup>
 
