--- a/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem.csproj
@@ -42,4 +42,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\audio\" />
+  </ItemGroup>
+
 </Project>
