--- a/Static Html Lib/Static Html Lib.csproj
+++ b/Static Html Lib/Static Html Lib.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Static_Html_Lib</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="mango\ConsoleApp1.sln" />
+  </ItemGroup>
+
 </Project>
