--- a/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem.csproj
@@ -7,7 +7,16 @@
   <ItemGroup>
     <Content Remove="wwwroot\css\det.css" />
     <Content Remove="wwwroot\css\index.css" />
+    <Content Remove="wwwroot\css\stardust.css" />
+    <Content Remove="wwwroot\js\stardust.js" />
+    <Content Remove="wwwroot\lib\Images\astronaut.png" />
     <Content Remove="wwwroot\lib\Images\cursor.png" />
+    <Content Remove="wwwroot\lib\Images\space_background.jpg" />
+    <Content Remove="wwwroot\lib\Images\Stars\star1.png" />
+    <Content Remove="wwwroot\lib\Images\Stars\star2.png" />
+    <Content Remove="wwwroot\lib\Images\Stars\star3.png" />
+    <Content Remove="wwwroot\lib\Images\Stars\star4.png" />
+    <Content Remove="wwwroot\lib\Images\Stars\star5.png" />
     <Content Remove="wwwroot\Planets\earth.png" />
     <Content Remove="wwwroot\Planets\jupiter.png" />
     <Content Remove="wwwroot\Planets\mars.png" />
@@ -24,7 +33,16 @@
   <ItemGroup>
     <None Include="wwwroot\css\det.css" />
     <None Include="wwwroot\css\index.css" />
+    <None Include="wwwroot\css\stardust.css" />
+    <None Include="wwwroot\js\stardust.js" />
+    <None Include="wwwroot\lib\Images\astronaut.png" />
     <None Include="wwwroot\lib\Images\cursor.png" />
+    <None Include="wwwroot\lib\Images\space_background.jpg" />
+    <None Include="wwwroot\lib\Images\Stars\star1.png" />
+    <None Include="wwwroot\lib\Images\Stars\star2.png" />
+    <None Include="wwwroot\lib\Images\Stars\star3.png" />
+    <None Include="wwwroot\lib\Images\Stars\star4.png" />
+    <None Include="wwwroot\lib\Images\Stars\star5.png" />
     <None Include="wwwroot\Planets\earth.png" />
     <None Include="wwwroot\Planets\jupiter.png" />
     <None Include="wwwroot\Planets\mars.png" />
