--- a/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem.csproj
@@ -17,16 +17,27 @@
     <Content Remove="wwwroot\lib\Images\Stars\star3.png" />
     <Content Remove="wwwroot\lib\Images\Stars\star4.png" />
     <Content Remove="wwwroot\lib\Images\Stars\star5.png" />
+    <Content Remove="wwwroot\Planets\earth-structure.png" />
     <Content Remove="wwwroot\Planets\earth.png" />
+    <Content Remove="wwwroot\Planets\jupiter-structure.png" />
     <Content Remove="wwwroot\Planets\jupiter.png" />
+    <Content Remove="wwwroot\Planets\mars-structure.png" />
     <Content Remove="wwwroot\Planets\mars.png" />
+    <Content Remove="wwwroot\Planets\mercury-structure.png" />
     <Content Remove="wwwroot\Planets\mercury.png" />
+    <Content Remove="wwwroot\Planets\moon-structure.png" />
     <Content Remove="wwwroot\Planets\moon.png" />
+    <Content Remove="wwwroot\Planets\neptune-structure.jpg" />
     <Content Remove="wwwroot\Planets\neptune.png" />
+    <Content Remove="wwwroot\Planets\pluto-structure.png" />
     <Content Remove="wwwroot\Planets\pluto.png" />
+    <Content Remove="wwwroot\Planets\saturn-structure.png" />
     <Content Remove="wwwroot\Planets\saturn.png" />
+    <Content Remove="wwwroot\Planets\sun-structure.png" />
     <Content Remove="wwwroot\Planets\sun.png" />
+    <Content Remove="wwwroot\Planets\uranus-structure.png" />
     <Content Remove="wwwroot\Planets\uranus.png" />
+    <Content Remove="wwwroot\Planets\venus-structure.png" />
     <Content Remove="wwwroot\Planets\venus.png" />
   </ItemGroup>
 
@@ -43,16 +54,27 @@
     <None Include="wwwroot\lib\Images\Stars\star3.png" />
     <None Include="wwwroot\lib\Images\Stars\star4.png" />
     <None Include="wwwroot\lib\Images\Stars\star5.png" />
+    <None Include="wwwroot\Planets\earth-structure.png" />
     <None Include="wwwroot\Planets\earth.png" />
+    <None Include="wwwroot\Planets\jupiter-structure.png" />
     <None Include="wwwroot\Planets\jupiter.png" />
+    <None Include="wwwroot\Planets\mars-structure.png" />
     <None Include="wwwroot\Planets\mars.png" />
+    <None Include="wwwroot\Planets\mercury-structure.png" />
     <None Include="wwwroot\Planets\mercury.png" />
+    <None Include="wwwroot\Planets\moon-structure.png" />
     <None Include="wwwroot\Planets\moon.png" />
+    <None Include="wwwroot\Planets\neptune-structure.jpg" />
     <None Include="wwwroot\Planets\neptune.png" />
+    <None Include="wwwroot\Planets\pluto-structure.png" />
     <None Include="wwwroot\Planets\pluto.png" />
+    <None Include="wwwroot\Planets\saturn-structure.png" />
     <None Include="wwwroot\Planets\saturn.png" />
+    <None Include="wwwroot\Planets\sun-structure.png" />
     <None Include="wwwroot\Planets\sun.png" />
+    <None Include="wwwroot\Planets\uranus-structure.png" />
     <None Include="wwwroot\Planets\uranus.png" />
+    <None Include="wwwroot\Planets\venus-structure.png" />
     <None Include="wwwroot\Planets\venus.png" />
   </ItemGroup>
 
