--- a/SolarSystem/appsettings.json
+++ b/SolarSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,1433; Database=SolarSystemData; User Id=sa; Password=Kode1234!"
+    "DefaultConnection": "Server=10.108.149.13; Database=SolarSystemData; User Id=sa; Password=Code123!"
   },
   "Logging": {
     "LogLevel": {
