Changed formatting and added audio files to database

--- a/SolarSystem/appsettings.json
+++ b/SolarSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,1433; Database=SolarSystemData; User Id=sa; Password=Kode1234!"
+    "DefaultConnection": "Server=LAPTOP-H8E83SN4; Database=SolarSystemData; User Id=sa; Password=code1234"
   },
   "Logging": {
     "LogLevel": {
